--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <a onclick="showPage('about')">About</a>
             <a onclick="showPage('content')">Content</a>
             <a onclick="showPage('news')">News</a>
+            <a onclick="showPage('games')">Our Games</a>
         </nav>
         
         <div id="home" class="content active">
@@ -95,6 +96,12 @@
         <div id="news" class="content">
             <h1>Minecraft News</h1>
             <p>Minecraft updates and our own updates!</p>
+        </div>
+
+        <div id="games" class="content">
+            <h1>Our Games</h1>
+            <p>All of our games!</p>
+            <a href="https://minecraft-web.online/shootinggame.html" target="_self">Shooting Game</a>
         </div>
     </div>
     
