--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <h1>Our Games</h1>
             <p>All of our games!</p>
             <a href="https://minecraft-web.online/shootinggame.html" target="_self">Shooting Game</a>
+            <a href="https://minecraft-web.online/blockmatch.html" target="_self">BlockMatch</a>
         </div>
     </div>
     
