--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         <div id="games" class="content">
             <h1>Our Games</h1>
             <p>All of our games!</p>
-            <a href="https://minecraft-web.online/shootinggame.html" target="_self">Shooting Game</a>
-            <a href="https://minecraft-web.online/blockmatch.html" target="_self">BlockMatch</a>
+            <a href="https://minecraft-web.online/shootinggame" target="_self">Shooting Game</a>
+            <a href="https://minecraft-web.online/blockmatch" target="_self">BlockMatch</a>
         </div>
     </div>
     
