--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <p>All of our games!</p>
             <a href="https://minecraft-web.online/shootinggame" target="_self">Shooting Game</a>
             <a href="https://minecraft-web.online/blockmatch" target="_self">BlockMatch</a>
+            <a href="https://minecraft-web.online/geometrydash" target="_self">GeometryDash (HoodaMath)</a>
         </div>
     </div>
     
