--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <a href="https://minecraft-web.online/shootinggame" target="_self">Shooting Game</a>
             <a href="https://minecraft-web.online/blockmatch" target="_self">BlockMatch</a>
             <a href="https://minecraft-web.online/geometrydash" target="_self">GeometryDash (HoodaMath)</a>
+            <a href="https://minecraft-web.online/blockblast" target="_self">BlockBlast (HoodaMath)</a>
         </div>
     </div>
     
